--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://aural.es'" />
+    <meta http-equiv="refresh" content="0; URL='https://youtu.be/QL6kfhD_sSA'" />
   </head>
   <body>
     <p>Redirigiendo...</p>
